test/error/lex/unopenedComment.tig
let
	var openComments := 2 */
in
end
